--- a/src/pages/alpine.astro
+++ b/src/pages/alpine.astro
@@ -3,6 +3,12 @@ import MainLayout from '@/layouts/MainLayout.astro';
 import { AlpineList } from '@/components';
 ---
 
-<MainLayout>
+<MainLayout title="Alpine">
   <AlpineList />
 </MainLayout>
+
+<style>
+  body {
+    background-color: #7cbacc;
+  }
+</style>
