--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,12 @@
 import MainLayout from '@/layouts/MainLayout.astro';
 ---
 
-<MainLayout>
-  <h1 class="text-title">Hello World!</h1>
+<MainLayout title="Astro">
+  <section>Hello Astro</section>
 </MainLayout>
+
+<style>
+  body {
+    background-color: #ca98b7;
+  }
+</style>
