adjusted lit bg color

--- a/src/pages/lit.astro
+++ b/src/pages/lit.astro
@@ -9,6 +9,6 @@ import { LitList } from '@/components';
 
 <style>
   body {
-    background-color: #7088ff;
+    background-color: #70a0ff;
   }
 </style>
