--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,16 @@ import MainLayout from '@/layouts/MainLayout.astro';
 ---
 
 <MainLayout title="Astro">
-  <section>Hello Astro</section>
+  <section class="mt-top flex flex-row items-center justify-between">
+    <div class="flex flex-col justify-center">
+      <strong class="text-min uppercase">Todo List</strong>
+      <h1 class="slab mb-4 text-headline">archipelago</h1>
+      <p class="text-subtitle mb-8">ärkəˈpeləˌɡō</p>
+      <strong>noun</strong>
+      <p>a large group or chain of islands</p>
+    </div>
+    <div>List</div>
+  </section>
 </MainLayout>
 
 <style>
