Extracted bread text into a component and added it to each page

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,7 @@ import { Icon } from 'astro-icon/components';
 ---
 
 <header
-  class="text-light bg-dark/75 outline-dark sticky mx-auto my-6 flex max-w-min rounded-full px-8 text-bread shadow outline outline-1 backdrop-blur-lg"
+  class="text-light bg-dark/75 outline-dark sticky mx-auto mt-6 flex max-w-min rounded-full px-8 text-bread shadow outline outline-1 backdrop-blur-lg"
 >
   <a href="/">
     <Icon name="astro-logo" class="text-xl" />Astro
