--- a/src/pages/alpine.astro
+++ b/src/pages/alpine.astro
@@ -1,10 +1,14 @@
 ---
 import MainLayout from '@/layouts/MainLayout.astro';
 import { AlpineList } from '@/components';
+import Bread from '@/components/Bread.astro';
 ---
 
 <MainLayout title="Alpine">
-  <AlpineList />
+  <section>
+    <Bread />
+    <AlpineList />
+  </section>
 </MainLayout>
 
 <style>
