--- a/src/pages/lit.astro
+++ b/src/pages/lit.astro
@@ -1,10 +1,14 @@
 ---
 import MainLayout from '@/layouts/MainLayout.astro';
 import { LitList } from '@/components';
+import Bread from '@/components/Bread.astro';
 ---
 
 <MainLayout title="Lit">
-  <LitList client:only="lit" />
+  <section>
+    <Bread />
+    <LitList client:only="lit" />
+  </section>
 </MainLayout>
 
 <style>
