--- a/src/pages/preact.astro
+++ b/src/pages/preact.astro
@@ -1,10 +1,14 @@
 ---
 import MainLayout from '@/layouts/MainLayout.astro';
 import { PreactList } from '@/components';
+import Bread from '@/components/Bread.astro';
 ---
 
 <MainLayout title="Preact">
-  <PreactList client:only="preact" />
+  <section>
+    <Bread />
+    <PreactList client:only="preact" />
+  </section>
 </MainLayout>
 
 <style>
