--- a/src/pages/vue.astro
+++ b/src/pages/vue.astro
@@ -1,10 +1,14 @@
 ---
 import MainLayout from '@/layouts/MainLayout.astro';
 import { VueList } from '@/components';
+import Bread from '@/components/Bread.astro';
 ---
 
 <MainLayout title="Vue">
-  <VueList client:only="vue" />
+  <section>
+    <Bread />
+    <VueList client:only="vue" />
+  </section>
 </MainLayout>
 
 <style>
