--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,6 @@
 @tailwind utilities;
 
 :root {
-  --space-4xl: clamp(8rem, 7.7027rem + 1.4414vi, 9rem);
-
   /* Font Sizes */
   --step-00: clamp(0.8333rem, 0.8302rem + 0.0153vi, 0.844rem);
   --step-0: clamp(1rem, 0.9628rem + 0.1802vi, 1.125rem);
@@ -34,13 +32,24 @@ body {
   transition-duration: 300ms !important;
 }
 
-h1,
+h1 {
+  line-height: 1;
+}
+
 h2,
 h3,
 button,
 input,
 label {
   line-height: 1.1;
+}
+
+section {
+  display: flex;
+  min-height: 70dvh;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .container {
