--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import Bread from '@/components/Bread.astro';
 <MainLayout title="Astro">
   <section>
     <Bread />
-    <div>List</div>
+    <div id="list">List</div>
   </section>
 </MainLayout>
 
