--- a/src/pages/solid.astro
+++ b/src/pages/solid.astro
@@ -13,6 +13,6 @@ import Bread from '@/components/Bread.astro';
 
 <style>
   body {
-    background-color: #7899c4;
+    background-color: var(--solid);
   }
 </style>
