--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,6 +22,14 @@
   .add-button {
     @apply ml-2 flex items-center justify-center gap-2 rounded-lg bg-dark/75 px-5 py-3 font-medium outline-1 outline-dark transition-all duration-200;
   }
+
+  .todo-content {
+    @apply my-1 w-full rounded-lg bg-highlight px-3 py-2;
+  }
+
+  .delete-button {
+    @apply ml-2 rounded-lg bg-highlight px-4 py-3 hover:bg-red-900;
+  }
 }
 
 :root {
