--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,14 +7,8 @@ if (Astro.request.method === 'POST') {
   try {
     const data = await Astro.request.formData();
     const task = data.get('task');
-    const checked = data.get('checked');
-    const checkedString = checked?.toString();
 
     if (task) list.value.push(task);
-    if (checkedString) {
-      console.log(checkedString);
-      list.value.splice(parseInt(checkedString), 1);
-    }
   } catch (error) {
     if (error instanceof Error) {
       console.log(error.message);
@@ -24,24 +18,15 @@ if (Astro.request.method === 'POST') {
 ---
 
 <script>
+  import { actions } from 'astro:actions';
+
   document.addEventListener('astro:page-load', () => {
     const tasks = document.querySelectorAll('[data-delete-button]');
     tasks.forEach((task) => {
       const input = task.previousElementSibling;
       const taskIndex = input.getAttribute('value');
-      task.addEventListener('click', (e) => {
-        const formData = new FormData();
-        formData.append('checked', taskIndex);
-        try {
-          fetch('/', {
-            method: 'POST',
-            body: formData,
-          });
-        } catch (error) {
-          if (error instanceof Error) {
-            console.log(error.message);
-          }
-        }
+      task.addEventListener('click', async (e) => {
+        actions.deleteTask(parseInt(taskIndex));
       });
     });
   });
@@ -65,7 +50,6 @@ if (Astro.request.method === 'POST') {
         />
         <button
           id="submit"
-          type="submit"
           aria-label="add todo button"
           class="add-button hover:bg-astro"
         >
@@ -77,7 +61,7 @@ if (Astro.request.method === 'POST') {
           list.value.map((todo, idx) => (
             <div class="flex flex-row items-center">
               <p class="todo-content">{todo}</p>
-              <input id={todo} value={idx} name="checked" class="sr-only" />
+              <input id={todo} value={idx} class="sr-only" />
               <button
                 data-delete-button
                 aria-label="delete button"
