--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,7 +34,7 @@ if (Astro.request.method === 'POST') {
 
 <MainLayout title="Astro">
   <section>
-    <Bread />
+    <Bread home={true} />
     <div class="list-base">
       <p class="text-subtitle">
         Your <span class="framework decoration-astro">Astro</span> todo list
