--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,8 @@ if (Astro.request.method === 'POST') {
     tasks.forEach((task) => {
       const input = task.previousElementSibling;
       const taskIndex = input.getAttribute('value');
-      task.addEventListener('click', async (e) => {
-        actions.deleteTask(parseInt(taskIndex));
+      task.addEventListener('click', async () => {
+        await actions.deleteTask(taskIndex);
       });
     });
   });
