reworked delete action and action calls to try and fix not valid json error

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -27,7 +27,7 @@ if (Astro.request.method === 'POST') {
       const input = task.previousElementSibling;
       const taskValue = input.getAttribute('value');
       task.addEventListener('click', async () => {
-        await actions.deleteTask(taskValue);
+        await actions.deleteTask({ todo: taskValue });
       });
     });
   });
